# sghh-zip

./: LICENSE  README.md  sghh-zip.cabal
.stack-work/install/x86_64-osx/lts-7.4/8.0.1/flag-cache/: aeson-0.11.2.1-5ZQWuTFmffALcfpzDCXoOz  async-2.1.0-J6Pl8k3L4PKGEpjYdgwiIf  attoparsec-0.13.1.0-5Olk1S76r1CDYzFS6V3sZR  bindings-DSL-1.0.23-GUrVdpTUVQC2JWoov2sGwA  blaze-builder-0.4.0.2-KWDLbdBYSBoALiMW0LHIz1  bzlib-conduit-0.2.1.4-5zsOy4uQOtN78pLDXrNjWj  case-insensitive-1.2.0.7-FlqweN7AuKj9EdU2arVEt4  cereal-0.5.3.0-90KodwwwQanJlL7equBhpB  conduit-1.2.8-26yreGsdcSzh1pqnBzLwi  conduit-extra-1.1.13.3-AHdJvsGZafy29Xve8J7q8a  data-default-0.7.1.1-5uix4eIzBY9IcVb4V2HbW3  data-default-class-0.1.2.0-FYQpjIylblBDctdkHAFeXA  data-default-instances-containers-0.0.1-B3LqdWnlDzL8N7WtQnkQ3T  data-default-instances-dlist-0.0.1-7EnnOuRxBMR4O5lm1rpRqD  data-default-instances-old-locale-0.0.1-LPOHPEJCJUa53W1ZYaHB84  digest-0.0.1.2-Jkg2DJlP1uNCnEMQswznXb  dlist-0.8.0.2-GWAMmbX9rLg3tqrbOizHGv  exceptions-0.8.3-7py7fmRxowDFpHmiHGKrTb  fail-4.9.0.0-FGE8TmYPyfd2ZUpoMVx9sD  hashable-1.2.4.0-EMu4H7FB10MAl6hwKw992G  lifted-base-0.2.3.8-KLkd0w1UJqu6nE8oVTTEBy  mmorph-1.0.6-3xsw6wg6Vs2JmwrJVsaYA0  monad-control-1.0.1.0-HoNEBoNfniX3vjSfkI7WTT  mtl-2.2.1-6qsR1PHUy5lL47Hpoa4jCM  network-2.6.3.1-G4Up1CPKbp7DeFsnywOnGG  old-locale-1.0.0.7-6glXNhHF891B41ZfuI8hU8  path-0.5.9-AF8sCreSPoOG1xpg5h0ldY  path-io-1.2.0-3BVuuEGDvkvERtSg0zZXPf  plan-b-0.2.0-I9w1sKUoKwa4glkaSgOwo4  primitive-0.6.1.0-Ip44DqhfCp21tTUYbecwa  random-1.1-54KmMHXjttlERYcr1mvsAe  resourcet-1.1.8-DtucZp9ByzO1R9fWHvzpg6  (+15 more)
src/: Main.hs
