name:                sghh-zip
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/mezzomondo/sghh-zip#readme
license:             BSD3
license-file:        LICENSE
author:              Miki Fossati
maintainer:          miki@improntenelweb.it
copyright:           nessuno
category:            tbd
build-type:          Simple
cabal-version:       >=1.10

executable sghh-zip
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                       , zip == 0.1.3
                       , directory
                       , filepath
                       , bytestring
                       , path
